2003-11-10  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-component.c: Ported to use EMFolderTree.

	* mail-offline-handler.c (storage_go_online): Updated to not pass
	a storage argument.

	* mail-folder-cache.c: Removed storage stuff.

	* mail-send-recv.c (receive_update_got_store): Don't do EStorage*
	stuff anymore.

2003-11-07  JP Rosevear <jpr@ximian.com>

	* Makefile.am: build the marshall files right at the beginning

2003-11-07  JP Rosevear <jpr@ximian.com>

	* Makefile.am: Make sure the marshal files are listed above other
	sources

2003-11-06  Jeffrey Stedfast  <fejj@ximian.com>

	* em-migrate.c (em_migrate_filter_file): Call em_migrate_uri()
	instead of em_uri_from_camel().
	(em_migrate_uri): Special-case file: uri's by converting them into
	email://local@local/ uri's since these folders will have been
	migrated to the newer mbox tree structure.

2003-11-06  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-vfolder.c (mail_vfolder_delete_uri): User vfolder rules
	should be in ${evolution_dir}/mail/vfolders.xml rather than
	${evolution_dir}/vfolders.xml
	(mail_vfolder_rename_uri): Same.
	(store_folder_deleted): Here too.
	(store_folder_renamed): And here.
	(vfolder_load_storage): Again here.
	(vfolder_editor_response): Same.
	(edit_rule_response): And here.
	(new_rule_clicked): Here too.

	* mail-session.c (main_get_filter_driver): User filter rules
	should be in ${evolution_dir}/mail/filters.xml rather than
	${evolution_dir}/filters.xml

	* mail-autofilter.c (filter_gui_add_from_message): Same.
	(mail_filter_rename_uri): And here.
	(mail_filter_delete_uri): Here too.

	* em-utils.c (filter_editor_response): Again here.
	(em_utils_edit_filters): Same.

	* em-migrate.c (em_migrate_filter_file): Same (also for
	vfolders.xml)

2003-11-05  Jeffrey Stedfast  <fejj@ximian.com>

	* em-migrate.[c,h]: New source files to migrate from the old mail
	directory to the new mail directory.

	* mail-component.c (mail_component_init): Changed to use